--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ramen-restaurant",
   "version": "0.1.0",
+  "homepage": "https://tomkotsu.github.io/ramen-restaurant",
   "private": true,
   "dependencies": {
     "@heroicons/react": "^1.0.6",
@@ -13,6 +14,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -39,6 +42,8 @@
   "devDependencies": {
     "autoprefixer": "^10.4.8",
     "postcss": "^8.4.16",
-    "tailwindcss": "^3.1.8"
+    "tailwindcss": "^3.1.8",
+    "gh-pages": "^4.0.0"
+
   }
 }
